[package]
name = "engine2"
version = "0.1.0"
authors = ["Johannes Drönner <droenner@informatik.uni-marburg.de>"]
edition = "2018"

[lib]
name = "engine_x"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.3"
typetag = "0.1"
num-traits = "0.2"
